--- a/Maze.cbp
+++ b/Maze.cbp
@@ -9,6 +9,7 @@
 			<Target title="Debug">
 				<Option output="bin/Debug/Maze" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
+				<Option external_deps="/usr/include/SDL2/SDL.h;" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -32,8 +33,12 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-std=c++11" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Linker>
+			<Add library="SDL2" />
+		</Linker>
 		<Unit filename="include/Location.h" />
 		<Unit filename="include/Place.h" />
 		<Unit filename="include/RecursiveBackTracker.h" />
